--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -11,7 +11,17 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TITLE: true
-          COMMIT_MESSAGE: Updated the Readme - Github Actions          
+          COMMIT_MESSAGE: Updated the Readme - Github Actions
+  update-medium:
+    name: Update Medium Articles
+    runs-on: ubuntu-latest
+    steps:
+      - uses: wathsara/medium-blogs-readme@master
+        with:
+          MEDIUM_HANDLER: '@wathsara'
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          REPOSITORY: Wathsara/Wathsara
+          DAYS: 365          
   publish:
     runs-on: ubuntu-latest
     steps:
